--- a/MyTweets/Base.lproj/Main.storyboard
+++ b/MyTweets/Base.lproj/Main.storyboard
@@ -361,7 +361,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eic-dz-FoZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1927.5" y="850.35211267605632"/>
+            <point key="canvasLocation" x="1511" y="897"/>
         </scene>
         <!--Compose Tweet View Controller-->
         <scene sceneID="0jD-wZ-KrH">
@@ -377,10 +377,6 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Cj-zs-F5c">
                                 <rect key="frame" x="253" y="509" width="37" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="S2U-EW-bMu"/>
-                                    <constraint firstAttribute="width" constant="37" id="yQO-4V-pzk"/>
-                                </constraints>
                                 <state key="normal" title="Done"/>
                                 <connections>
                                     <action selector="doneButtonOnTap:" destination="kol-7O-Wkt" eventType="touchUpInside" id="vqX-eA-Kvm"/>
@@ -396,12 +392,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="KeP-NW-nwA" secondAttribute="trailing" constant="42" id="0WN-AD-5m2"/>
-                            <constraint firstItem="1Cj-zs-F5c" firstAttribute="leading" secondItem="MRt-Mt-zW9" secondAttribute="leading" constant="253" id="CEH-FN-W5h"/>
-                            <constraint firstItem="KuI-Ny-Kgn" firstAttribute="top" secondItem="1Cj-zs-F5c" secondAttribute="bottom" constant="29" id="Cvg-vx-Xap"/>
-                            <constraint firstAttribute="trailing" secondItem="1Cj-zs-F5c" secondAttribute="trailing" constant="30" id="MoD-QX-vnv"/>
-                            <constraint firstItem="1Cj-zs-F5c" firstAttribute="top" secondItem="KeP-NW-nwA" secondAttribute="bottom" constant="95" id="bfD-sM-3Yh"/>
+                            <constraint firstItem="KuI-Ny-Kgn" firstAttribute="top" secondItem="1Cj-zs-F5c" secondAttribute="bottom" constant="29" id="3U5-JD-yTw"/>
+                            <constraint firstItem="1Cj-zs-F5c" firstAttribute="leading" secondItem="MRt-Mt-zW9" secondAttribute="leading" constant="253" id="Ipp-Z1-EaN"/>
+                            <constraint firstItem="1Cj-zs-F5c" firstAttribute="top" secondItem="KeP-NW-nwA" secondAttribute="bottom" constant="95" id="LR7-yQ-EHa"/>
+                            <constraint firstAttribute="bottom" secondItem="KeP-NW-nwA" secondAttribute="bottom" constant="154" id="RlN-Vn-3Zg"/>
                             <constraint firstItem="KeP-NW-nwA" firstAttribute="top" secondItem="7Jq-cW-Oec" secondAttribute="bottom" constant="39" id="eOq-Kz-k5U"/>
                             <constraint firstItem="KeP-NW-nwA" firstAttribute="leading" secondItem="MRt-Mt-zW9" secondAttribute="leading" constant="42" id="hla-la-BfS"/>
+                            <constraint firstAttribute="trailing" secondItem="1Cj-zs-F5c" secondAttribute="trailing" constant="30" id="j7c-Zd-Oah"/>
                         </constraints>
                     </view>
                     <connections>
@@ -410,7 +407,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kg3-bl-Mn1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2808.75" y="850.35211267605632"/>
+            <point key="canvasLocation" x="2381" y="897"/>
         </scene>
         <!--Tweet Detail View Controller-->
         <scene sceneID="U7I-t3-eEF">
@@ -439,6 +436,9 @@
                                 </constraints>
                                 <inset key="contentEdgeInsets" minX="1" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="retweet"/>
+                                <connections>
+                                    <action selector="retweetOnTap:" destination="MX6-kf-B8B" eventType="touchUpInside" id="Dd0-Gc-bom"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s1e-iY-ScS">
                                 <rect key="frame" x="36" y="350" width="30" height="30"/>
@@ -448,11 +448,17 @@
                                 </constraints>
                                 <inset key="contentEdgeInsets" minX="1" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="reply"/>
+                                <connections>
+                                    <action selector="replyOnTap:" destination="MX6-kf-B8B" eventType="touchUpInside" id="Dkw-xQ-Gul"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TVp-8D-H8x">
                                 <rect key="frame" x="254" y="350" width="30" height="30"/>
                                 <inset key="contentEdgeInsets" minX="1" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="fav"/>
+                                <connections>
+                                    <action selector="favOnTap:" destination="MX6-kf-B8B" eventType="touchUpInside" id="1cb-L9-3uY"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4zX-fd-boh" customClass="BottomView">
                                 <rect key="frame" x="0.0" y="381" width="320" height="2"/>
